--- a/src/components/AboutUsStyles.css
+++ b/src/components/AboutUsStyles.css
@@ -1,14 +1,16 @@
 .about-container {
    margin: 4rem 6rem;
-   text-align: start; 
+   text-align: justify;
 }
 
 about-container h1 {
-   padding-bottom: 1rem; 
+   padding-bottom: 2%; 
+   padding-top: 1rem;
 }
 
 about-container p {
-    padding-bottom: 2%; 
+    padding-bottom: 20%; 
+    
  }
 
  @media screen  and (max-width: 850px) {
