--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -57,6 +57,30 @@ img {
     display: none;
   }
 
+/* HeroStyles.css */
+
+/* Stiluri pentru butonul Journey Plan */
+.show {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.show:hover {
+  background-color: #0056b3;
+}
+
+
+
+
+  
+
+
   @media screen and (max-width: 555px) {
     .hero-text h1 {
       padding: 10px 20px;  
