--- a/src/components/TripStyles.css
+++ b/src/components/TripStyles.css
@@ -1,10 +1,12 @@
 .trip {
     margin: 4rem 6rem;
     color: #2a2a2a;
+    
 }
 
 .trip h1 {
     font-size: 3rem;
+    margin-bottom: 2rem;
 }
 
 .tripcard {
@@ -19,7 +21,9 @@
     box-shadow: 0 5px 25px 2px rgba(0, 0, 0, 0.11);
     border-radius: 7px;
     cursor: pointer;
-    padding: 1rem .8rem;
+    padding: 1rem 2rem;
+    text-align: justify;
+    font-size: 14px;
 }
 
 .t-image {
