--- a/src/components/ContactFormStyles.css
+++ b/src/components/ContactFormStyles.css
@@ -23,7 +23,7 @@
     padding: 1rem;
     margin-bottom: 2rem;
     border-radius: 0.3rem;
-    border: 1px solid #2a2a2a;
+    border: 1px solid #131111;
 }
 
 .form-container button {
