--- a/src/components/AboutUsStyles.css
+++ b/src/components/AboutUsStyles.css
@@ -3,15 +3,15 @@
    text-align: justify;
 }
 
-about-container h1 {
+.about-container h1 {
    padding-bottom: 2%; 
-   padding-top: 1rem;
+   padding-top: 0.1rem;
 }
 
-about-container p {
-    padding-bottom: 20%; 
-    
- }
+.about-container p {
+    padding-bottom: 3%; 
+    line-height: 1.8;
+    }
 
  @media screen  and (max-width: 850px) {
     .about-container {
