--- a/src/components/ContactFormStyles.css
+++ b/src/components/ContactFormStyles.css
@@ -30,6 +30,10 @@
     display: inline;
 }
 
+.form-container button:hover {
+    background-color: #01959a;;
+}
+
 @media screen and (max-width: 850px) {
     .form-container {
         margin: 4rem 2rem;
