--- a/src/components/DestinationStyles.css
+++ b/src/components/DestinationStyles.css
@@ -4,6 +4,7 @@
 
 .destination h1 {
     font-size: 3rem;
+    margin-bottom: 1.5rem;
 }
 
 .first-des {
@@ -11,6 +12,8 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 4.5rem; 
+    line-height: 1.7;
+
 }
 
 .first-des-reverse {
@@ -19,6 +22,8 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 4.5rem; 
+    line-height: 1.7;
+
 }
 
 .des-text {
