--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -6,7 +6,7 @@
     padding: 0 30px;
     box-shadow: 0 5px 15px 0 rgb(0, 0, 0, .25);
     width: 95%;
-    height: 88px;
+    height: 75px;
     border-radius: 13px;
     position: fixed;
     top: 20px;
@@ -17,7 +17,7 @@
 
 .navbar-logo {
     color: #222;
-    font-size: 2rem;
+    font-size: 1.8rem;
     cursor: pointer;
 }
 
@@ -36,6 +36,7 @@
   font-weight: 600;
   padding: 0.7rem 1rem;
   white-space: nowrap;
+  font-size: 18px;
 }
 
 .nav-links i{
