--- a/src/components/TripStyles.css
+++ b/src/components/TripStyles.css
@@ -1,7 +1,6 @@
 .trip {
     margin: 4rem 6rem;
-    color: #2a2a2a;
-    
+    color: #2a2a2a;  
 }
 
 .trip h1 {
@@ -9,10 +8,13 @@
     margin-bottom: 2rem;
 }
 
+
+
 .tripcard {
    margin-top: 3rem;
    display: flex;
    justify-content: space-between; 
+   line-height: 1.7;
 }
 
 .t-card {
